--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -23,6 +23,11 @@
     border: 1px solid white;
     transition-duration: .5s;
     transition-delay: .05s;
-    
-   
+    cursor: pointer;
+}
+
+button {
+    background-color: red;
+    color: white;
+    float: left;
 }
