Solve Qu Problem

--- a/src/Components/BoggleMatrix/BoggleMatrix.css
+++ b/src/Components/BoggleMatrix/BoggleMatrix.css
@@ -20,3 +20,5 @@
     display: inline-block;
     line-height: 100px;
 }
+
+.vaporwave { text-shadow:-.0625rem -.0625rem 20px #6BFFFF, .0625rem .0625rem 20px #FF819E;}
