--- a/src/Pages/HomePage/Home.css
+++ b/src/Pages/HomePage/Home.css
@@ -14,9 +14,25 @@ a {
     color: white;
     font-size: 16px;
     transition-duration: 1s;
+    width: 100%;
+    height: 100%;
+
 }
 
 div > a:hover {
     font-size: 20px;
     transition-duration: .5s;
+}
+
+.BoggleMenu > div:first-child {
+    background-color: white;
+    color:black;
+    
+}
+
+.BoggleMenu > div > div {
+    display: inline-flex;
+    justify-content: space-between;
+    font-size: 49px;
+    
 }
